# pytoros

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  python-publish.yml
