[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.7"
name = "pytoros"
version = "0.0.1"
description = "A python wrapper for toros."
readme = "README.md"
keywords = ["leverage", "toros", "crypto"]
authors = [
  {name = "Mohammed Faheem", email = "mohdfaheem.1205@gmail.com"},
  {name = "Dhruvan Gnanadhandayuthapani", email = "dhruvan2006@gmail.com"},
]   

dependencies = [
    "requests",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["pytoros"] 
include = ["*"]


[project.urls]
source = "https://github.com/dhruvan2006/pytoros.git"

classifiers = [
    "Development Status :: 4 - Beta"
    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]